timeware/src/objects/Accrual_Policy__c.object
<CustomObject>
    <description>Accrual Policy requires benefit code, class of employee and accrual issue type.</description>
    <fields>
        <fullName>Accrual_Issue__c</fullName>
        <description>Select the accrual issue type. Default is &quot;Annual&quot;.</description>
        <label>Accrual Issue</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Anniversary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accural_Class__c</fullName>
        <label>Accrual Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Rollover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Rollover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Start_Month_Number__c</fullName>
        <description>Calculate start month number based on &quot;Annual Start Month&quot; picklist selection.</description>
        <formula>CASE(Annual_Start_Month__c, &apos;January&apos;, 1, &apos;February&apos;, 2, &apos;March&apos;, 3, &apos;April&apos;, 4, &apos;May&apos;, 5, &apos;June&apos;, 6, &apos;July&apos;, 7, &apos;August&apos;, 8, &apos;September&apos;, 9, &apos;October&apos;, 10, &apos;November&apos;, 11, &apos;December&apos;, 12, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Start Month Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Start_Month__c</fullName>
        <description>If &quot;Accrual Issue&quot; type is &quot;Annual&quot;, select the start month. Default is &quot;January&quot;.</description>
        <label>Annual Start Month</label>
        <picklist>
            <controllingField>Accrual_Issue__c</controllingField>
            <picklistValues>
                <fullName>January</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cutoff_Days__c</fullName>
        <label>Cutoff Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Class__c</fullName>
        <label>Employee Class</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly Full Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly Temporary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary Non-Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Hours_Accrued__c</fullName>
        <label>Maximum Hours Accrued</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Code__c</fullName>
        <label>Pay Code</label>
        <referenceTo>Pay_Code__c</referenceTo>
        <relationshipLabel>Accrual Policies</relationshipLabel>
        <relationshipName>R00N700000021P7NEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rollover_Hours__c</fullName>
        <label>Rollover Hours</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Accrual Policy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Accrual Policy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accrual Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>